@@ -1,0 +1,238 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<!-- Created using Sublime Text, by Steven A. Warren (ScottishRamblyMan), on 20/11/2016 -->
+<!-- Reference File(s): Root\Base\Assets\Gameplay\Data: Civilizations.xml, GreatPeople.xml, -->
+
+<!--
+	The changes below modify the player's generation of all great person points by +200%, 
+	for a total of 300% GPP generation.
+
+	In order to achieve this, we have implemented a new TRAIT, TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS, with the 
+	necessary modifiers applied.
+-->
+
+<GameInfo>
+	<!--
+		Create new modifiers, one for each Type of Great Person.
+		Reference: Root\Base\Assets\Gameplay\Data\Civilizations.xml, Lines 236 onwards.
+	-->
+	<Modifiers>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_GENERAL_POINTS_PERCENT</ModifierId>
+			<ModifierType>MODIFIER_PLAYER_ADJUST_GREAT_PERSON_POINTS_PERCENT</ModifierType>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_ADMIRAL_POINTS_PERCENT</ModifierId>
+			<ModifierType>MODIFIER_PLAYER_ADJUST_GREAT_PERSON_POINTS_PERCENT</ModifierType>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_ENGINEER_POINTS_PERCENT</ModifierId>
+			<ModifierType>MODIFIER_PLAYER_ADJUST_GREAT_PERSON_POINTS_PERCENT</ModifierType>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_MERCHANT_POINTS_PERCENT</ModifierId>
+			<ModifierType>MODIFIER_PLAYER_ADJUST_GREAT_PERSON_POINTS_PERCENT</ModifierType>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_PROPHET_POINTS_PERCENT</ModifierId>
+			<ModifierType>MODIFIER_PLAYER_ADJUST_GREAT_PERSON_POINTS_PERCENT</ModifierType>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_SCIENTIST_POINTS_PERCENT</ModifierId>
+			<ModifierType>MODIFIER_PLAYER_ADJUST_GREAT_PERSON_POINTS_PERCENT</ModifierType>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_WRITER_POINTS_PERCENT</ModifierId>
+			<ModifierType>MODIFIER_PLAYER_ADJUST_GREAT_PERSON_POINTS_PERCENT</ModifierType>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_ARTIST_POINTS_PERCENT</ModifierId>
+			<ModifierType>MODIFIER_PLAYER_ADJUST_GREAT_PERSON_POINTS_PERCENT</ModifierType>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_MUSICIAN_POINTS_PERCENT</ModifierId>
+			<ModifierType>MODIFIER_PLAYER_ADJUST_GREAT_PERSON_POINTS_PERCENT</ModifierType>
+		</Row>
+	</Modifiers>
+	<!--
+		The modifier's in-game affect.
+		Reference: Root\Base\Assets\Gameplay\Data\Civilizations.xml, Lines 841-880.
+	-->
+	<ModifierArguments>
+		<!-- Great General -->
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_GENERAL_POINTS_PERCENT</ModifierId>
+			<Name>GreatPersonClassType</Name>
+			<Value>GREAT_PERSON_CLASS_GENERAL</Value>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_GENERAL_POINTS_PERCENT</ModifierId>
+			<Name>Amount</Name>
+			<Value>200</Value>
+		</Row>
+		<!-- Great Admiral -->
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_ADMIRAL_POINTS_PERCENT</ModifierId>
+			<Name>GreatPersonClassType</Name>
+			<Value>GREAT_PERSON_CLASS_ADMIRAL</Value>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_ADMIRAL_POINTS_PERCENT</ModifierId>
+			<Name>Amount</Name>
+			<Value>200</Value>
+		</Row>
+		<!-- Great Engineer -->
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_ENGINEER_POINTS_PERCENT</ModifierId>
+			<Name>GreatPersonClassType</Name>
+			<Value>GREAT_PERSON_CLASS_ENGINEER</Value>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_ENGINEER_POINTS_PERCENT</ModifierId>
+			<Name>Amount</Name>
+			<Value>200</Value>
+		</Row>
+		<!-- Great Merchant -->
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_MERCHANT_POINTS_PERCENT</ModifierId>
+			<Name>GreatPersonClassType</Name>
+			<Value>GREAT_PERSON_CLASS_MERCHANT</Value>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_MERCHANT_POINTS_PERCENT</ModifierId>
+			<Name>Amount</Name>
+			<Value>200</Value>
+		</Row>
+		<!-- Great Prophet -->
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_PROPHET_POINTS_PERCENT</ModifierId>
+			<Name>GreatPersonClassType</Name>
+			<Value>GREAT_PERSON_CLASS_PROPHET</Value>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_PROPHET_POINTS_PERCENT</ModifierId>
+			<Name>Amount</Name>
+			<Value>200</Value>
+		</Row>
+		<!-- Great Scientist -->
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_SCIENTIST_POINTS_PERCENT</ModifierId>
+			<Name>GreatPersonClassType</Name>
+			<Value>GREAT_PERSON_CLASS_SCIENTIST</Value>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_SCIENTIST_POINTS_PERCENT</ModifierId>
+			<Name>Amount</Name>
+			<Value>200</Value>
+		</Row>
+		<!-- Great Writer -->
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_WRITER_POINTS_PERCENT</ModifierId>
+			<Name>GreatPersonClassType</Name>
+			<Value>GREAT_PERSON_CLASS_WRITER</Value>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_WRITER_POINTS_PERCENT</ModifierId>
+			<Name>Amount</Name>
+			<Value>200</Value>
+		</Row>
+		<!-- Great Artist -->
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_ARTIST_POINTS_PERCENT</ModifierId>
+			<Name>GreatPersonClassType</Name>
+			<Value>GREAT_PERSON_CLASS_ARTIST</Value>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_ARTIST_POINTS_PERCENT</ModifierId>
+			<Name>Amount</Name>
+			<Value>200</Value>
+		</Row>
+		<!-- Great Musician -->
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_MUSICIAN_POINTS_PERCENT</ModifierId>
+			<Name>GreatPersonClassType</Name>
+			<Value>GREAT_PERSON_CLASS_MUSICIAN</Value>
+		</Row>
+		<Row>
+			<ModifierId>MODIFIER_X_GREAT_MUSICIAN_POINTS_PERCENT</ModifierId>
+			<Name>Amount</Name>
+			<Value>200</Value>
+		</Row>
+	</ModifierArguments>
+	<!--
+		Create a new Trait. 
+		Reference : Root\Base\Assets\Gameplay\Data\Civilizations.xml: Lines 8 onwards, 1809 onwards.
+	-->
+	<Types>
+    	<Row Type="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS" Kind="KIND_TRAIT"/>
+  	</Types>
+	<Traits>
+		<Row TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS" Name=" " Description=" "/>
+	</Traits>
+	<!--
+		Add the Modifiers to the Trait.
+		Reference : Root\Base\Assets\Gameplay\Data\Civilizations.xml: Line 1869 onwards.
+	-->
+	<TraitModifiers>
+		<Row>
+			<TraitType>TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS</TraitType>
+			<ModifierId>MODIFIER_X_GREAT_GENERAL_POINTS_PERCENT</ModifierId>
+		</Row>
+		<Row>
+			<TraitType>TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS</TraitType>
+			<ModifierId>MODIFIER_X_GREAT_ADMIRAL_POINTS_PERCENT</ModifierId>
+		</Row>
+		<Row>
+			<TraitType>TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS</TraitType>
+			<ModifierId>MODIFIER_X_GREAT_ENGINEER_POINTS_PERCENT</ModifierId>
+		</Row>
+		<Row>
+			<TraitType>TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS</TraitType>
+			<ModifierId>MODIFIER_X_GREAT_MERCHANT_POINTS_PERCENT</ModifierId>
+		</Row>
+		<Row>
+			<TraitType>TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS</TraitType>
+			<ModifierId>MODIFIER_X_GREAT_PROPHET_POINTS_PERCENT</ModifierId>
+		</Row>
+		<Row>
+			<TraitType>TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS</TraitType>
+			<ModifierId>MODIFIER_X_GREAT_SCIENTIST_POINTS_PERCENT</ModifierId>
+		</Row>
+		<Row>
+			<TraitType>TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS</TraitType>
+			<ModifierId>MODIFIER_X_GREAT_WRITER_POINTS_PERCENT</ModifierId>
+		</Row>
+		<Row>
+			<TraitType>TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS</TraitType>
+			<ModifierId>MODIFIER_X_GREAT_ARTIST_POINTS_PERCENT</ModifierId>
+		</Row>
+		<Row>
+			<TraitType>TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS</TraitType>
+			<ModifierId>MODIFIER_X_GREAT_MUSICIAN_POINTS_PERCENT</ModifierId>
+		</Row>
+	</TraitModifiers>
+	<!--
+		Apply the Trait to all Major Civilizations.
+		Reference : Root\Base\Assets\Gameplay\Data\Civilizations.xml: Line 2247 onwards.
+	-->
+	<CivilizationTraits>
+		<Row CivilizationType="CIVILIZATION_AMERICA" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_ARABIA" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_AZTEC" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_BRAZIL" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_CHINA" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_EGYPT" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_ENGLAND" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_FRANCE" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_GERMANY" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_GREECE" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_INDIA" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_JAPAN" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_KONGO" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_NORWAY" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_ROME" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_RUSSIA" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_SCYTHIA" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_SPAIN" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+		<Row CivilizationType="CIVILIZATION_SUMERIA" TraitType="TRAIT_TRIPLE_ALL_GREAT_PERSON_POINTS"/>
+	</CivilizationTraits>
+</GameInfo>
