@@ -22,6 +22,7 @@
 				<File>Data/LowerMedAndLaterUnitCost.xml</File>
 				<File>Data/LowerTechCost.xml</File>
 				<File>Data/ScoutChanges.xml</File>
+				<File>Data/TripleGreatPersonPoints.xml</File>
 				<File>Data/TurnPhasesChanges.xml</File>
 				<File>Data/WallChanges.xml</File>
 			</Items>
@@ -49,6 +50,7 @@
 		<File>Data/LowerMedAndLaterUnitCost.xml</File>
 		<File>Data/LowerTechCost.xml</File>
 		<File>Data/ScoutChanges.xml</File>
+		<File>Data/TripleGreatPersonPoints.xml</File>
 		<File>Data/TurnPhasesChanges.xml</File>
 		<File>Data/WallChanges.xml</File>
 		<!-- localized text -->
